# mcp-smart-proxy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  publish.sh
.github/workflows/: release.yml
Formula/: msp.rb
scripts/: render-homebrew-formula.sh
src/: cli.rs  commands.rs  config.rs  console.rs  env_template.rs  main.rs  mcp_server.rs  paths.rs  reload.rs  remote.rs  toon.rs  types.rs  version_check.rs
src/commands/: auth_cmd.rs  config_cmd.rs  import_cmd.rs  input_cmd.rs  mcp_cli.rs  provider.rs
src/config/: import_export.rs  local.rs  provider.rs  self_server.rs  tests.rs
src/config/import_export/: claude.rs  codex.rs  common.rs  copilot.rs  json_support.rs  opencode.rs  toml_support.rs
src/config/local/: lookup.rs  schema.rs  update.rs
src/daemon/: mod.rs  runtime.rs
src/input_popup/: mod.rs  schema.rs  ui.rs
src/mcp_server/: cache.rs  client.rs  mod.rs  server.rs  tests.rs  tools.rs
src/reload/: summarizer.rs
src/remote/: callback.rs  headers.rs  oauth.rs  store.rs
src/version_check/: compare.rs  install.rs  mod.rs  runtime.rs  state.rs
swift/input_popup/: main.swift
