[package]
name = "mcp-smart-proxy"
version = "0.0.17"
edition = "2024"
default-run = "msp"
description = "A smart proxy for multiple stdio MCP servers"
homepage = "https://github.com/tiejunhu/mcp-smart-proxy"
repository = "https://github.com/tiejunhu/mcp-smart-proxy"

[[bin]]
name = "msp"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.40", features = ["clock"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls"] }
rmcp = { version = "0.16.0", features = ["client", "server", "transport-child-process", "transport-io"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8.20"
